fix responsive grid

--- a/src/core/langs/th.json
+++ b/src/core/langs/th.json
@@ -41,115 +41,6 @@
     "TermsAndConditions":"ข้อกำหนดและนโยบาย",
     "RememberYourPasswordSymbol":"จำรหัสผ่านของคุณใช่ไหม?",
     "ResetPassword":"รีเซ็ตรหัสผ่าน",
-        "SERVICE_WEB": {
-        "TITLE": "เว็บไซต์",
-        "DESCRIPTION": "เว็บไซต์พื้นฐานที่คุณไม่สามารถสร้าง แก้ไข ลบ หรือจัดการเนื้อหาได้หลังจากการปรับใช้",
-        "Basic": {
-            "DESCRIPTION": "สำหรับพอร์ตโฟลิโอ ไซต์ส่วนบุคคล และสตาร์ทอัพ",
-            "PRICE": "฿5,000",
-            "PRICE_OLD": "฿10,500",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,การตั้งค่าอีเมล,การแก้ไขการออกแบบ 1 ครั้ง,จำนวนหน้า 1 หน้า",
-            "EXCLUDES": "แบบฟอร์มติดต่อ,การเพิ่มประสิทธิภาพโปรแกรมค้นหา,การเพิ่มประสิทธิภาพความเร็ว,เชื่อมต่อ API,การป้องกัน DDOS"
-        },
-        "Standard": {
-            "DESCRIPTION": "สำหรับส่วนบุคคล สตาร์ทอัพ และธุรกิจขนาดเล็ก",
-            "PRICE": "฿10,000",
-            "PRICE_OLD": "฿21,000",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,การตั้งค่าอีเมล,การแก้ไขการออกแบบ 2 ครั้ง,จำนวนหน้าสูงสุด 3 หน้า,แบบฟอร์มติดต่อ,การป้องกัน DDOS",
-            "EXCLUDES": "การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,เชื่อมต่อ API"
-        },
-        "Premium": {
-            "DESCRIPTION": "สำหรับสตาร์ทอัพ ธุรกิจขนาดเล็ก/กลาง และองค์กร",
-            "PRICE": "฿17,500",
-            "PRICE_OLD": "฿32,000",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,การตั้งค่าอีเมล,การแก้ไขการออกแบบสูงสุด 5 ครั้ง,จำนวนหน้าสูงสุด 10 หน้า,ส่วนที่ไม่จำกัด,แบบฟอร์มติดต่อ,การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,เชื่อมต่อ API,การป้องกัน DDOS",
-            "EXCLUDES": ""
-        },
-        "Custom": {
-            "DESCRIPTION": "สำหรับธุรกิจขนาดเล็ก/กลาง/ใหญ่ และองค์กร",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/th/contact'\">ติดต่อเรา</button>",
-            "PRICE_OLD": "",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,การตั้งค่าอีเมล,การแก้ไขการออกแบบไม่จำกัด,จำนวนหน้าไม่จำกัด,รองรับการปรับใช้ที่ซับซ้อนมากขึ้น,แบบฟอร์มติดต่อ,การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,เชื่อมต่อ API,การป้องกัน DDOS,รองรับหลายภาษา,อื่น ๆ อีกมากมาย...",
-            "EXCLUDES": ""
-        }
-    },
-    "SERVICE_WORDPRESS": {
-        "TITLE": "เว็บไซต์ Wordpress",
-        "DESCRIPTION": "ระบบจัดการเนื้อหา (CMS) ที่ช่วยให้ผู้ใช้สร้าง อัปเดต และจัดการเว็บไซต์และบล็อก มีอินเทอร์เฟซที่ใช้งานง่ายและชุดรูปแบบและปลั๊กอินที่ปรับแต่งได้มากมายซึ่งช่วยเสริมการทำงานและรูปลักษณ์ของเว็บไซต์",
-        "Basic": {
-            "DESCRIPTION": "สำหรับพอร์ตโฟลิโอ ไซต์ส่วนบุคคล และสตาร์ทอัพ",
-            "PRICE": "฿5,000",
-            "PRICE_OLD": "฿14,000",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,ตั้งค่าอีเมล,การแก้ไขการออกแบบ 1 ครั้ง,จำนวนหน้าไม่จำกัด,ระบบแบ็กเอนด์และการดูแลระบบ,การฝึกอบรม 1 ชั่วโมง",
-            "EXCLUDES": "การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,การเชื่อมต่อ API,การป้องกัน DDOS,การสนับสนุน E-Commerce"
-        },
-        "Standard": {
-            "DESCRIPTION": "สำหรับส่วนบุคคล สตาร์ทอัพ และธุรกิจขนาดเล็ก",
-            "PRICE": "฿10,000",
-            "PRICE_OLD": "฿25,000",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,ตั้งค่าอีเมล,การแก้ไขการออกแบบสูงสุด 2 ครั้ง,จำนวนหน้าไม่จำกัด,ระบบแบ็กเอนด์และการดูแลระบบ,การฝึกอบรม 1 ชั่วโมง,การป้องกัน DDOS",
-            "EXCLUDES": "การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,การเชื่อมต่อ API,การสนับสนุนอีคอมเมิร์ซ"
-        },
-        "Premium": {
-            "DESCRIPTION": "สำหรับสตาร์ทอัพ ธุรกิจขนาดเล็ก/กลาง และองค์กร",
-            "PRICE": "฿17,500",
-            "PRICE_OLD": "฿35,000",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,ตั้งค่าอีเมล,การแก้ไขการออกแบบสูงสุด 5 ครั้ง,จำนวนหน้าไม่จำกัด,ระบบแบ็กเอนด์และการดูแลระบบ,การฝึกอบรม 2 ชั่วโมง,การป้องกัน DDOS,การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,5 การเชื่อมต่อ API,การสนับสนุนอีคอมเมิร์ซ"
-        },
-        "Custom": {
-            "DESCRIPTION": "สำหรับธุรกิจขนาดเล็ก/กลาง/ใหญ่ และองค์กร",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/th/contact'\">ติดต่อเรา</button>",
-            "INCLUDES": "ชื่อโดเมนฟรี,โฮสติ้งฟรี,ตั้งค่าอีเมล,การแก้ไขการออกแบบไม่จำกัด,จำนวนหน้าไม่จำกัด,ระบบแบ็กเอนด์และการดูแลระบบ,การฝึกอบรมไม่จำกัดชั่วโมง,การป้องกัน DDOS,การเพิ่มประสิทธิภาพเครื่องมือค้นหา,การเพิ่มประสิทธิภาพความเร็ว,การเชื่อมต่อ API ไม่จำกัด,การสนับสนุนอีคอมเมิร์ซ,รองรับหลายภาษา,อื่นๆ อีกมากมาย..."
-        }
-    },
-    "SERVICE_MOBILE_APP": {
-        "TITLE": "แอพพลิเคชั่นมือถือ",
-        "DESCRIPTION": "เป็นโปรแกรมซอฟต์แวร์ที่ออกแบบมาเพื่อทำงานบนอุปกรณ์เคลื่อนที่ เช่น สมาร์ทโฟนและแท็บเล็ต แอปเหล่านี้ได้รับการพัฒนาขึ้นโดยเฉพาะสำหรับแพลตฟอร์มมือถือ โดยใช้ประโยชน์จากคุณสมบัติและความสามารถของมัน",
-        "Basic": {
-            "DESCRIPTION": "แอปพลิเคชันพื้นฐาน",
-            "PRICE": "฿10,000",
-            "PRICE_OLD": "฿25,000",
-            "INCLUDES": "แอพที่ใช้งานได้,การส่งแอพ,หน้าจอเริ่มต้น,5 หน้าจอ,2 ระบบปฏิบัติการ,1 การแก้ไขการออกแบบ",
-            "EXCLUDES": "แบ็กเอนด์และ API,การเชื่อต่อ API,แบ็กเอนด์และ โฮสติ้ง API"
-        },
-        "Standard": {
-            "DESCRIPTION": "แอปพลิเคชันที่ซับซ้อนปานกลาง",
-            "PRICE": "฿50,000",
-            "PRICE_OLD": "฿150,000",
-            "INCLUDES": "แอพที่ใช้งานได้,การส่งแอพ,หน้าจอสแปลช,7 หน้าจอ,2 ระบบปฏิบัติการ,การแก้ไขการออกแบบสูงสุด 2 ครั้ง,การเชื่อต่อ API 5 รายการ",
-            "EXCLUDES": "แบ็กเอนด์และ API,แบ็กเอนด์และโฮสติ้ง API"
-        },
-        "Premium": {
-            "DESCRIPTION": "แอปพลิเคชันมือถือพร้อมแบ็กเอนด์และฐานข้อมูล",
-            "PRICE": "฿150,000",
-            "PRICE_OLD": "฿350,000",
-            "INCLUDES": "แอพที่ใช้งานได้,การส่งแอพ,หน้าจอสแปลช,หน้าจอไม่จำกัด,แบ็กเอนด์และการเชื่อต่อ API 10 รายการ,ระบบปฏิบัติการ 2 ระบบ,การแก้ไขการออกแบบสูงสุด 3 ครั้ง",
-            "EXCLUDES": "แบ็คเอนด์และโฮสติ้ง API"
-        },
-        "Custom": {
-            "DESCRIPTION": "แอปพลิเคชันมือถือพร้อมแบ็กเอนด์และฐานข้อมูล ราคาขึ้นอยู่กับความซับซ้อนของแอพ",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/th/contact'\">ติดต่อเรา</button>",
-            "INCLUDES": "แอพที่ใช้งานได้,การส่งแอพ,หน้าจอสแปลช,หน้าจอไม่จำกัด,API และการผสานการทำงานไม่จำกัด,2 ระบบปฏิบัติการ,การแก้ไขการออกแบบสูงสุด 5 ครั้ง,แบ็คเอนด์และโฮสติ้ง API,อื่นๆ อีกมากมาย..."
-        }
-    },
-    "WEB_BASIC_PRICE_OLD":"฿10,500",
-    "WEB_BASIC_PRICE":"฿5,000",
-    "WEB_STANDARD_PRICE_OLD":"฿21,000",
-    "WEB_STANDARD_PRICE":"฿10,000",
-    "WEB_PREMIUM_PRICE_OLD":"฿32,000",
-    "WEB_PREMIUM_PRICE":"฿17,500",
-
-    "WORDPRESS_BASIC_PRICE_OLD":"฿14,000",
-    "WORDPRESS_BASIC_PRICE":"฿5,000",
-    "WORDPRESS_STANDARD_PRICE_OLD":"฿25,000",
-    "WORDPRESS_STANDARD_PRICE":"฿10,000",
-    "WORDPRESS_PREMIUM_PRICE_OLD":"฿35,000",
-    "WORDPRESS_PREMIUM_PRICE":"฿17,500",
-  
-    "Basic":"ขั้นพื้นฐาน",
-    "Standard":"มาตรฐาน",
-    "Premium":"พรีเมี่ยม",
-    "Custom":"กำหนดเอง",
-    "StartingAt":"เริ่มต้นที่"
+    "Menu":"เมนู"
     
 }
