--- a/src/core/langs/en.json
+++ b/src/core/langs/en.json
@@ -40,101 +40,5 @@
     "TermsAndConditions":"Terms and Conditions",
     "RememberYourPasswordSymbol":"Remember your password?",
     "ResetPassword":"Reset Password",
-    "SERVICE_WEB": {
-        "TITLE": "Web Site",
-        "DESCRIPTION": "Basic web site that you cannot create, edit, delete or manage  content after deployment",
-        "Basic": {
-            "DESCRIPTION": "For Portfolio, Personal Sites and Startups",
-            "PRICE": "$150",
-            "PRICE_OLD": "$300",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,1 design revision,1 page,3 sections",
-            "EXCLUDES": "Contact form,Search engine optimization,Speed optimization,APIs Integration,DDOS protection"
-        },
-        "Standard": {
-            "DESCRIPTION": "For Personal, Startups and Small Business",
-            "PRICE": "$300",
-            "PRICE_OLD": "$600",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,2 design revisions,1 page,5 sections,Contact form,DDOS protection",
-            "EXCLUDES": "Search engine optimization,Speed optimization,APIs Integration"
-        },
-        "Premium": {
-            "DESCRIPTION": "For Startups, Small/Medium Business and Corporate",
-            "PRICE": "$500",
-            "PRICE_OLD": "$900",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,Up to 5 design revisions,Up to 10 pages,Unlimited sections,Contact form,Search engine optimization,Speed optimization,5 APIs Integration,DDOS protection",
-            "EXCLUDES": ""
-        },
-        "Custom": {
-            "DESCRIPTION": "For Small/Medium/Large Business and Corporate",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/en/contact'\">Contact</button>",
-            "PRICE_OLD": "",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,Unlimited design revisions,Unlimited pages,Unlimited sections,Support more complex deployment,Contact form,Search engine optimization,Speed optimization,API Integrations,DDOS protection,Multiple languages support,Many more...",
-            "EXCLUDES": ""
-        }
-    },
-    "SERVICE_WORDPRESS": {
-        "TITLE": "Wordpress Web Site",
-        "DESCRIPTION": "Content management system (CMS) that allows users to create, update and manage websites and blogs. It provides a user-friendly interface and a range of customizable themes and plugins that enhance the functionality and appearance of websites",
-        "Basic": {
-            "DESCRIPTION": "For Portfolio, Personal Sites and Startups",
-            "PRICE": "$150",
-            "PRICE_OLD": "$400",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,1 design revision,Unlimited pages,Backend & Administration System,1 hour training",
-            "EXCLUDES": "Search engine optimization,Speed optimization,API Integrations,DDOS protection,E-Commerce Support,Multiple languages support"
-        },
-        "Standard": {
-            "DESCRIPTION": "For Portfolio, Personal, Startups and Small Business",
-            "PRICE": "$300",
-            "PRICE_OLD": "$700",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,Up to 2 design revisions,Unlimited pages,Backend & Administration System,1 hour training,DDOS protection",
-            "EXCLUDES": "Search engine optimization,Speed optimization,API Integrations,E-Commerce Support,Multiple languages support"
-        },
-        "Premium": {
-            "DESCRIPTION": "For Startups, Small/Medium Business and Corporate",
-            "PRICE": "$500",
-            "PRICE_OLD": "$1,000",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,Up to 5 design revisions,Unlimited pages,Backend & Administration System,2 hours training,DDOS protection,Search engine optimization,Speed optimization,5 APIs Integration,E-Commerce Support",
-            "EXCLUDES": "Multiple languages support"
-        },
-        "Custom": {
-            "DESCRIPTION": "For Small/Medium/Large Business and Corporate",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/en/contact'\">Contact</button>",
-            "INCLUDES": "Free Domain Name,Free Hosting,Email setup,Up to 5 design revisions,Unlimited pages,Backend & Administration System,Unlimited hours training,DDOS protection,Search engine optimization,Speed optimization,Unlimited API Integrations,E-Commerce Support,Multiple languages support,Many more..."
-        }
-    },
-    "SERVICE_MOBILE_APP": {
-        "TITLE": "Mobile App",
-        "DESCRIPTION": "It is a software program designed to run on mobile devices such as smartphones and tablets. These apps are developed specifically for the mobile platform, taking advantage of its features and capabilities",
-        "Basic": {
-            "DESCRIPTION": "Basic application",
-            "PRICE": "$300",
-            "PRICE_OLD": "$700",
-            "INCLUDES": "Functional app,App submission,Splash screen,5 screens,2 operating systems,1 design revisions",
-            "EXCLUDES": "Backend & API,APIs integration,Backend & API Hosting"
-        },
-        "Standard": {
-            "DESCRIPTION": "Moderately complex application",
-            "PRICE": "$1,420",
-            "PRICE_OLD": "$3,000",
-            "INCLUDES": "Functional app,App submission,Splash screen,7 screens,2 operating systems,Up to 2 design revisions,5 APIs integration",
-            "EXCLUDES": "Backend & API,Backend & API Hosting"
-        },
-        "Premium": {
-            "DESCRIPTION": "Mobile Application with Backend and Database.",
-            "PRICE": "$4,300",
-            "PRICE_OLD": "$10,000",
-            "INCLUDES": "Functional app,App submission,Splash screen,Unlimited screens,10 APIs backend & integration,2 operating systems,Up to 3 design revisions",
-            "EXCLUDES": "Backend & API Hosting"
-        },
-        "Custom": {
-            "DESCRIPTION": "Mobile Application with Backend and Database. Pricing Depends on the complexity of App",
-            "PRICE": "<button href='contact' class='button-primary' onclick=\"location.href='/en/contact'\">Contact</button>",
-            "INCLUDES": "Functional app,App submission,Splash screen,Unlimited screens,Unlimited APIs & integration,2 operating systems,Up to 5 design revisions,Backend & API Hosting,Many more..."
-        }
-    },
-    "Basic": "Basic",
-    "Standard": "Standard",
-    "Premium": "Premium",
-    "Custom": "Custom",
-    "StartingAt": "Starting at"
+    "Menu":"Menu"
 }
